@@ -5,3 +5,4 @@
 -KHAROUF Saber
 -SAIS Ilyes
 
+"./jdk-18.0.1.1/bin/java" --module-path ".\javafx-sdk-21.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar "./projectmanager-0.0.1-SNAPSHOT.jar" "./DataBaseGestionProjet.db"
